--- a/App/Eventos/Pages/LoginPage.xaml
+++ b/App/Eventos/Pages/LoginPage.xaml
@@ -59,14 +59,22 @@
                 Margin="0,20,0,0"
                 Padding="0"
                 CornerRadius="15">
-                <Entry
-                    Margin="0,0,0,0"
-                    FontSize="16"
-                    IsPassword="True"
-                    Placeholder="Contraseña"
-                    PlaceholderColor="#205048"
-                    Text="{Binding PasswordLogin}"
-                    TextColor="#205048" />
+                <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                    <Entry
+                        Margin="0,0,-37,0"
+                        FontSize="16"
+                        HorizontalOptions="FillAndExpand"
+                        IsPassword="{Binding IsVisiblePassword, Converter={StaticResource InvertedBoolConverter}}"
+                        Placeholder="Contraseña"
+                        PlaceholderColor="#205048"
+                        Text="{Binding PasswordLogin}"
+                        TextColor="#205048" />
+                    <ImageButton
+                        Margin="0,0,17,0"
+                        Command="{Binding ViewPasswordCommand}"
+                        HorizontalOptions="End"
+                        Source="visibility" />
+                </StackLayout>
             </Frame>
 
             <Button
@@ -88,7 +96,7 @@
             <Button
                 BackgroundColor="Transparent"
                 BorderColor="#ABBA3C"
-                BorderWidth = "2"
+                BorderWidth="2"
                 Command="{Binding RegistryUserCommand}"
                 CornerRadius="20"
                 FontSize="16"
@@ -178,13 +186,21 @@
                         Radius="15"
                         Offset="-4,4" />
                 </Frame.Shadow>
-                <Entry
-                    Margin="20,0,20,0"
-                    IsPassword="True"
-                    Placeholder="Contraseña"
-                    PlaceholderColor="White"
-                    Text="{Binding Password}"
-                    TextColor="White" />
+                <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                    <Entry
+                        Margin="20,0,-27,0"
+                        HorizontalOptions="FillAndExpand"
+                        IsPassword="{Binding IsVisiblePassword, Converter={StaticResource InvertedBoolConverter}}"
+                        Placeholder="Contraseña"
+                        PlaceholderColor="White"
+                        Text="{Binding Password}"
+                        TextColor="White" />
+                    <ImageButton
+                        Margin="0,0,12,0"
+                        Command="{Binding ViewPasswordCommand}"
+                        HorizontalOptions="End"
+                        Source="visibility_white" />
+                </StackLayout>
             </Frame>
 
             <Frame
@@ -201,13 +217,21 @@
                         Radius="15"
                         Offset="-4,4" />
                 </Frame.Shadow>
-                <Entry
-                    Margin="20,0,20,0"
-                    IsPassword="True"
-                    Placeholder="Repetir contraseña"
-                    PlaceholderColor="White"
-                    Text="{Binding RepeatPassword}"
-                    TextColor="White" />
+                <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                    <Entry
+                        Margin="20,0,-27,0"
+                        HorizontalOptions="FillAndExpand"
+                        IsPassword="{Binding IsVisiblePassword, Converter={StaticResource InvertedBoolConverter}}"
+                        Placeholder="Repetir contraseña"
+                        PlaceholderColor="White"
+                        Text="{Binding RepeatPassword}"
+                        TextColor="White" />
+                    <ImageButton
+                        Margin="0,0,12,0"
+                        Command="{Binding ViewPasswordCommand}"
+                        HorizontalOptions="End"
+                        Source="visibility_white" />
+                </StackLayout>
             </Frame>
 
             <Frame
@@ -284,9 +308,9 @@
 
             <Label
                 Margin="0,0,0,20"
-                TextColor="White"
                 FontAttributes="Bold"
-                Text="Gracias por registrarte." />
+                Text="Gracias por registrarte."
+                TextColor="White" />
 
             <Label TextColor="White">
                 <Label.FormattedText>
@@ -320,9 +344,15 @@
                     TextColor="#184159" />
             </Frame>
 
-            <Label TextColor="White" Margin="0,10,0,20" Text="Si no encuentras el correo, revisa tu carpeta de spam." />
+            <Label
+                Margin="0,10,0,20"
+                Text="Si no encuentras el correo, revisa tu carpeta de spam."
+                TextColor="White" />
 
-            <Label TextColor="White" Margin="0,0,0,10" IsVisible="{Binding IsActiveSendCode, Converter={local:InvertedBoolConverter}}">
+            <Label
+                Margin="0,0,0,10"
+                IsVisible="{Binding IsActiveSendCode, Converter={local:InvertedBoolConverter}}"
+                TextColor="White">
                 <Label.FormattedText>
                     <FormattedString>
                         <Span Text="Podrás reenviar el código en " />
@@ -391,10 +421,13 @@
             <Label
                 Margin="0,0,0,10"
                 FontAttributes="Bold"
-                TextColor="White"
-                Text="Tu cuenta ha sido activada exitosamente." />
+                Text="Tu cuenta ha sido activada exitosamente."
+                TextColor="White" />
 
-            <Label TextColor="White" Margin="0,10,0,0" Text="Vuelve para iniciar sesión." />
+            <Label
+                Margin="0,10,0,0"
+                Text="Vuelve para iniciar sesión."
+                TextColor="White" />
 
             <Button
                 Margin="0,0,0,20"
@@ -498,7 +531,7 @@
                 Text="Valida tu cuenta"
                 TextColor="#ABBA3C" />
 
-            <Label TextColor="White" Text="Introduce el código de verificación que hemos enviado a tu correo electrónico para continuar." />
+            <Label Text="Introduce el código de verificación que hemos enviado a tu correo electrónico para continuar." TextColor="White" />
 
             <Frame
                 Margin="0,30,0,30"
@@ -522,9 +555,15 @@
                     TextColor="#184159" />
             </Frame>
 
-            <Label TextColor="White" Margin="0,20,0,20" Text="Si no encuentras el correo, revisa tu carpeta de spam." />
+            <Label
+                Margin="0,20,0,20"
+                Text="Si no encuentras el correo, revisa tu carpeta de spam."
+                TextColor="White" />
 
-            <Label TextColor="White" Margin="0,0,0,10" IsVisible="{Binding IsActiveSendCode, Converter={local:InvertedBoolConverter}}">
+            <Label
+                Margin="0,0,0,10"
+                IsVisible="{Binding IsActiveSendCode, Converter={local:InvertedBoolConverter}}"
+                TextColor="White">
                 <Label.FormattedText>
                     <FormattedString>
                         <Span Text="Podrás reenviar el código en " />
@@ -604,13 +643,21 @@
                         Radius="15"
                         Offset="-4,4" />
                 </Frame.Shadow>
-                <Entry
-                    Margin="20,0,20,0"
-                    IsPassword="True"
-                    Placeholder="Contraseña"
-                    PlaceholderColor="White"
-                    Text="{Binding Password}"
-                    TextColor="White" />
+                <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                    <Entry
+                        Margin="20,0,-27,0"
+                        HorizontalOptions="FillAndExpand"
+                        IsPassword="{Binding IsVisiblePassword, Converter={StaticResource InvertedBoolConverter}}"
+                        Placeholder="Contraseña"
+                        PlaceholderColor="White"
+                        Text="{Binding Password}"
+                        TextColor="White" />
+                    <ImageButton
+                        Margin="0,0,17,0"
+                        Command="{Binding ViewPasswordCommand}"
+                        HorizontalOptions="End"
+                        Source="visibility_white" />
+                </StackLayout>
             </Frame>
 
             <Frame
@@ -627,16 +674,24 @@
                         Radius="15"
                         Offset="-4,4" />
                 </Frame.Shadow>
-                <Entry
-                    Margin="20,0,20,0"
-                    IsPassword="True"
-                    Placeholder="Repetir contraseña"
-                    PlaceholderColor="White"
-                    Text="{Binding RepeatPassword}"
-                    TextColor="White" />
+                <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                    <Entry
+                        Margin="20,0,-27,0"
+                        HorizontalOptions="FillAndExpand"
+                        IsPassword="{Binding IsVisiblePassword, Converter={StaticResource InvertedBoolConverter}}"
+                        Placeholder="Repetir contraseña"
+                        PlaceholderColor="White"
+                        Text="{Binding RepeatPassword}"
+                        TextColor="White" />
+                    <ImageButton
+                        Margin="0,0,17,0"
+                        Command="{Binding ViewPasswordCommand}"
+                        HorizontalOptions="End"
+                        Source="visibility_white" />
+                </StackLayout>
             </Frame>
 
-            <Label TextColor="White" Text="La contraseña debe comenzar por una letra, contener mayúsculas, números y tener al menos 8 caracteres." />
+            <Label Text="La contraseña debe comenzar por una letra, contener mayúsculas, números y tener al menos 8 caracteres." TextColor="White" />
 
             <StackLayout
                 Margin="10,0,0,40"
@@ -685,9 +740,15 @@
                 Text="¡Actulización de contraseña!"
                 TextColor="#ABBA3C" />
 
-            <Label TextColor="White" Margin="0,0,0,0" Text="Contraseña actulizada correctamente. " />
+            <Label
+                Margin="0,0,0,0"
+                Text="Contraseña actulizada correctamente. "
+                TextColor="White" />
 
-            <Label TextColor="White" Margin="0,15,0,0" Text="Vuelve para iniciar sesión." />
+            <Label
+                Margin="0,15,0,0"
+                Text="Vuelve para iniciar sesión."
+                TextColor="White" />
 
             <Button
                 Margin="0,0,0,40"
