--- a/App/Eventos/Pages/SettingsPage.xaml
+++ b/App/Eventos/Pages/SettingsPage.xaml
@@ -153,6 +153,29 @@
 
             </Frame>
 
+            <Frame
+                Margin="0,30,0,0"
+                BackgroundColor="White"
+                CornerRadius="20">
+                <Label
+                    Margin="0,0,0,0"
+                    HorizontalOptions="FillAndExpand"
+                    MaxLines="1">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span
+                                FontSize="16"
+                                Text="Version "
+                                TextColor="#184159" />
+                            <Span
+                                FontSize="16"
+                                Text="{Binding Version}"
+                                TextColor="#184159" />
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+            </Frame>
+
 
             <Button
                 Margin="0,10,0,0"
@@ -213,36 +236,64 @@
                     </Frame>
 
                     <Frame BorderColor="Transparent">
-                        <Entry
-                            BackgroundColor="Transparent"
-                            FontSize="14"
-                            Placeholder="Contaseña actual"
-                            Text="{Binding Password}"
-                            TextColor="#184159" />
+                        <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                            <Entry
+                                Margin="0,0,-37,0"
+                                BackgroundColor="Transparent"
+                                FontSize="14"
+                                HorizontalOptions="FillAndExpand"
+                                IsPassword="{Binding IsVisiblePassword, Converter={StaticResource InvertedBoolConverter}}"
+                                Placeholder="Contaseña actual"
+                                Text="{Binding Password}"
+                                TextColor="#184159" />
+                            <ImageButton
+                                Margin="0,0,7,0"
+                                Command="{Binding ViewPasswordCommand}"
+                                HorizontalOptions="End"
+                                Source="visibility" />
+                        </StackLayout>
                     </Frame>
 
                     <Frame BorderColor="Transparent">
-                        <Entry
-                            BackgroundColor="Transparent"
-                            FontSize="14"
-                            Placeholder="Nueva contraseña"
-                            Text="{Binding NewPassword}"
-                            TextColor="#184159" />
+                        <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                            <Entry
+                                Margin="0,0,-37,0"
+                                BackgroundColor="Transparent"
+                                FontSize="14"
+                                HorizontalOptions="FillAndExpand"
+                                IsPassword="{Binding IsVisiblePassword, Converter={StaticResource InvertedBoolConverter}}"
+                                Placeholder="Nueva contraseña"
+                                Text="{Binding NewPassword}"
+                                TextColor="#184159" />
+                            <ImageButton
+                                Margin="0,0,7,0"
+                                Command="{Binding ViewPasswordCommand}"
+                                HorizontalOptions="End"
+                                Source="visibility" />
+                        </StackLayout>
                     </Frame>
 
                     <Frame BorderColor="Transparent">
-                        <Entry
-                            BackgroundColor="Transparent"
-                            FontSize="14"
-                            Placeholder="Confirmar nueva contraseña"
-                            Text="{Binding RepeatNewPassword}"
-                            TextColor="#184159" />
+                        <StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                            <Entry
+                                Margin="0,0,-37,0"
+                                BackgroundColor="Transparent"
+                                FontSize="14"
+                                HorizontalOptions="FillAndExpand"
+                                IsPassword="{Binding IsVisiblePassword, Converter={StaticResource InvertedBoolConverter}}"
+                                Placeholder="Confirmar nueva contraseña"
+                                Text="{Binding RepeatNewPassword}"
+                                TextColor="#184159" />
+                            <ImageButton
+                                Margin="0,0,7,0"
+                                Command="{Binding ViewPasswordCommand}"
+                                HorizontalOptions="End"
+                                Source="visibility" />
+                        </StackLayout>
                     </Frame>
                 </StackLayout>
 
             </Frame>
-
-
             <Button
                 Margin="0,10,0,0"
                 BackgroundColor="Transparent"
