--- a/App/Eventos/Pages/HistoryPage.xaml
+++ b/App/Eventos/Pages/HistoryPage.xaml
@@ -19,7 +19,6 @@
     </ContentPage.Resources>
 
     <StackLayout BackgroundColor="#184159">
-        <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
         <StackLayout Padding="0,0,0,10" BackgroundColor="#DDDDDD">
             <Border
                 Margin="0,-10,0,0"
@@ -34,12 +33,17 @@
             </Border>
         </StackLayout>
 
-        <RefreshView Command="{Binding RefreshAsyncCommand}" IsRefreshing="{Binding IsRefreshingList}">
+        <RefreshView Command="{Binding RefreshAsyncCommand}" IsRefreshing="{Binding IsRefreshingList}" RefreshColor="#ABBA3C">
             <StackLayout
                 Padding="0,0,0,0"
                 BackgroundColor="#DDDDDD"
                 HorizontalOptions="FillAndExpand"
                 VerticalOptions="FillAndExpand">
+                <ActivityIndicator
+                            IsRunning="{Binding IsBusy}"
+                            IsVisible="{Binding IsBusy}"
+                            VerticalOptions="CenterAndExpand"
+                            Color="#ABBA3C" />
                 <CollectionView
                     Margin="20,0,20,0"
                     BackgroundColor="#DDDDDD"
