--- a/App/Eventos/Pages/SettingsPage.xaml
+++ b/App/Eventos/Pages/SettingsPage.xaml
@@ -32,21 +32,19 @@
             </Border>
         </StackLayout>
 
-
-        <ActivityIndicator
-            HeightRequest="32"
-            IsRunning="True"
-            IsVisible="{Binding IsBusy}"
-            VerticalOptions="Center"
-            WidthRequest="32" />
         <StackLayout
             Padding="30,0"
             BackgroundColor="#DDDDDD"
             IsVisible="{Binding IsEditUserData, Converter={StaticResource InvertedBoolConverter}}"
             Spacing="25"
             VerticalOptions="FillAndExpand">
-
+            <ActivityIndicator
+                            IsRunning="{Binding IsBusy}"
+                            IsVisible="{Binding IsBusy}"
+                            VerticalOptions="CenterAndExpand"
+                            Color="#ABBA3C" />
             <Frame
+                IsVisible="{Binding IsEditUserData, Converter={StaticResource InvertedBoolConverter}}"
                 Margin="0,50,0,0"
                 BackgroundColor="White"
                 CornerRadius="20">
@@ -57,6 +55,7 @@
 
             </Frame>
             <Frame
+                IsVisible="{Binding IsEditUserData, Converter={StaticResource InvertedBoolConverter}}"
                 Margin="0,10,0,0"
                 BackgroundColor="White"
                 CornerRadius="20">
@@ -154,6 +153,7 @@
             </Frame>
 
             <Frame
+                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
                 Margin="0,30,0,0"
                 BackgroundColor="White"
                 CornerRadius="20">
@@ -178,6 +178,7 @@
 
 
             <Button
+                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
                 Margin="0,10,0,0"
                 BackgroundColor="#DDDDDD"
                 BorderColor="#ABBA3C"
@@ -197,6 +198,7 @@
             </Button>
 
             <Button
+                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
                 Margin="0,0,0,40"
                 BackgroundColor="#419387"
                 Command="{Binding LogoutCommand}"
@@ -220,9 +222,14 @@
             IsVisible="{Binding IsEditUserData}"
             Spacing="25"
             VerticalOptions="FillAndExpand">
-
+            <ActivityIndicator
+                            IsRunning="{Binding IsBusy}"
+                            IsVisible="{Binding IsBusy}"
+                            VerticalOptions="CenterAndExpand"
+                            Color="#ABBA3C" />
             <Frame
                 Margin="0,30,0,0"
+                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
                 BackgroundColor="White"
                 CornerRadius="20">
                 <StackLayout>
@@ -295,6 +302,7 @@
 
             </Frame>
             <Button
+                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
                 Margin="0,10,0,0"
                 BackgroundColor="Transparent"
                 BorderColor="#419387"
@@ -314,6 +322,7 @@
             </Button>
 
             <Button
+                IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
                 Margin="0,0,0,40"
                 BackgroundColor="#ABBA3C"
                 Command="{Binding ChangeUserDataCommand}"
