--- a/App/Eventos/Pages/HomePage.xaml
+++ b/App/Eventos/Pages/HomePage.xaml
@@ -54,16 +54,16 @@
                             <FormattedString>
                                 <Span
                                     FontSize="22"
-                                    Text="Hola "
-                                    TextColor="#184159" />
+                                    Text="Bienvenido "
+                                    TextColor="#61a60e" />
                                 <Span
                                     FontSize="22"
                                     Text="{Binding User.FullName}"
-                                    TextColor="#184159" />
+                                    TextColor="#61a60e" />
                                 <Span
                                     FontSize="22"
                                     Text="!"
-                                    TextColor="#184159" />
+                                    TextColor="#61a60e" />
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
@@ -72,33 +72,22 @@
                         <!--  Contenedor con un fondo y bordes redondeados  -->
                         <Frame
                             Margin="0,10,20,0"
-                            Padding="0"
+                            Padding="5"
                             BackgroundColor="#184159"
                             BorderColor="#D2E898"
                             CornerRadius="15"
                             HasShadow="False"
-                            HeightRequest="25"
+                            HeightRequest="12"
                             HorizontalOptions="FillAndExpand">
 
-                            <Grid>
-                                <!--  Progreso animado con gradiente y efectos de brillo  -->
-                                <ProgressBar
-                                    BackgroundColor="Transparent"
-                                    HeightRequest="25"
+                            <ProgressBar
+                                    BackgroundColor="#184159"
+                                    HeightRequest="12"
                                     HorizontalOptions="FillAndExpand"
                                     Progress="{Binding Progres}"
-                                    ProgressColor="#184159"
-                                    VerticalOptions="Center">
-                                    <ProgressBar.Background>
-                                        <!--  Efecto de fondo degradado  -->
-                                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
-                                            <GradientStop Offset="0.0" Color="#D2E898" />
-                                            <GradientStop Offset="1.0" Color="#D2E898" />
-                                        </LinearGradientBrush>
-                                    </ProgressBar.Background>
-                                </ProgressBar>
+                                    ProgressColor="#D2E898"
+                                    VerticalOptions="Center"/>
 
-                            </Grid>
                         </Frame>
 
                     </Grid>
@@ -115,19 +104,19 @@
                                 <Span
                                     FontSize="16"
                                     Text="Clicks: "
-                                    TextColor="#184159" />
+                                    TextColor="#61a60e" />
                                 <Span
                                     FontSize="16"
                                     Text="{Binding User.TotalClicksCurrentPeriod}"
-                                    TextColor="#184159" />
+                                    TextColor="#61a60e" />
                                 <Span
                                     FontSize="16"
                                     Text="/"
-                                    TextColor="#184159" />
+                                    TextColor="#61a60e" />
                                 <Span
                                     FontSize="16"
                                     Text="{Binding User.ClickCount}"
-                                    TextColor="#184159" />
+                                    TextColor="#61a60e" />
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
