--- a/App/Eventos/Pages/SettingsPage.xaml
+++ b/App/Eventos/Pages/SettingsPage.xaml
@@ -157,18 +157,21 @@
                                         </FormattedString>
                                     </Label.FormattedText>
                                 </Label>
-                                <Button
-                                    IsVisible="{Binding User.IsSubscribed, Converter={StaticResource InvertedBoolConverter}}"
-                                    Margin="0,10,0,0"
-                                    CornerRadius="15"
-                                    BackgroundColor="#184159"
-                                    BorderColor="Transparent"
-                                    Command="{Binding SuscribeCommand}"
-                                    FontSize="16"
-                                    HorizontalOptions="Start"
-                                    Text="Suscríbete"
-                                    TextColor="#ABBA3C"
-                                    VerticalOptions="Start" />
+                                <StackLayout Orientation="Horizontal" IsVisible="{Binding User.IsSubscribed, Converter={StaticResource InvertedBoolConverter}}">
+                                    <Label Text="Suscribete " FontSize="12" TextColor="#666666"/>
+                                    <Button
+                                        Margin="0,0,0,0"
+                                        Padding="0,0,0,0"
+                                        BackgroundColor="Transparent"
+                                        BorderColor="Transparent"
+                                        Command="{Binding SuscribeCommand}"
+                                        HorizontalOptions="Start"
+                                        Text="aquí"
+                                        FontSize="12"
+                                        TextColor="#ABBA3C"
+                                        VerticalOptions="Start" />
+                                </StackLayout>
+
                             </StackLayout>
 
                         </Frame>
